force-app/main/default/objects/Inventory_Snapshot__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventory Snapshots</relationshipLabel>
    <relationshipName>Product_Inventory_Snapshots</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product</description>
</CustomField>