force-app/main/default/objects/Inventory_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <label>Snapshot Date</label>
    <type>Date</type>
    <description>Snapshot Date</description>
</CustomField>