force-app/main/default/objects/Inventory_Snapshot__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Text</type>
    <length>40</length>
    <description>Warehouse</description>
</CustomField>